--- a/src/docs/asciidoc/road-to-immutability/070-modification-part2.adoc
+++ b/src/docs/asciidoc/road-to-immutability/070-modification-part2.adoc
@@ -136,7 +136,7 @@ We will not make any distinction between a functional interface and an abstract 
 If one were forced to make one, the _intention to hold data_ would be the dividing line between a functional interface, which conveys no such intention, and an abstract type, which does.
 
 In this section we want to discuss a limited application of functional interfaces: that where the SAMs have a local implementation.
-The general case, where abstract types come in via a parameter, will be taken up in <<higher-level-modifications>>.
+The general case, where abstract types come in via a parameter, will be taken up in <<immutable-content>>.
 Consider the following example:
 
 .Concrete implementation of suppliers
